--- a/Admin/orange.html
+++ b/Admin/orange.html
@@ -55,6 +55,11 @@
     </section>
 
     <!-- your code here -->
+    <section>
+        <div class="mainBody">
+            Your Code
+        </div>
+    </section>
 
 
 
