Admin Emran Done

--- a/Admin/dashboard.html
+++ b/Admin/dashboard.html
@@ -94,40 +94,36 @@
                 </div>
             </div>
         </div>
+        <!-- Chart -->
         <h3 class="i-name">Chart</h3>
         <div class="chartShow">
             <div id="chartContainer" style="height: 370px; width: 94%;"></div>
         </div>
-        <h3 class="i-name">Last Sell</h3>
+        <h3 class="i-name">Quantity Dropping</h3>
         <div class="board">
             <table width="100%">
                 <thead>
                     <tr>
-                        <td>Product</td>
-                        <td>Buyer</td>
-                        <td>Amount</td>
-                        <td>Status</td>
+                        <td>Name</td>
+                        <td>Category</td>
+                        <td>Available</td>
+                        <td>Action</td>
                         <td></td>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
                         <td class="people">
-                            <img src="../img/avocado.jpg" alt="">
+                            <img src="../img/rMango.jpg" alt="">
                             <div class="people-de">
-                                <h5>Avocado</h5>
-                                <p>Organic, Produced in personal garden</p>
+                                <h5>Khrisa pati</h5>
                             </div>
                         </td>
                         <td class="people-des">
-                            <h5>Hosen Shaheb</h5>
-                            <p>Address</p>
+                            <h5>Mango</h5>
                         </td>
                         <td>
-                            <p>Price: 1,000</p>
-                        </td>
-                        <td class="active">
-                            <p>Active</p>
+                            <p>500 kg</p>
                         </td>
 
                         <td class="edit">
@@ -137,21 +133,16 @@
                     </tr>
                     <tr>
                         <td class="people">
-                            <img src="../img/banana.jpg" alt="">
+                            <img src="../img/rMango.jpg" alt="">
                             <div class="people-de">
-                                <h5>Banana</h5>
-                                <p>Organic, Produced in personal garden</p>
+                                <h5>Khrisa pati</h5>
                             </div>
                         </td>
                         <td class="people-des">
-                            <h5>Hosen Shaheb</h5>
-                            <p>Address</p>
+                            <h5>Mango</h5>
                         </td>
                         <td>
-                            <p>Price: 1,000</p>
-                        </td>
-                        <td class="active">
-                            <p>Active</p>
+                            <p>500 kg</p>
                         </td>
 
                         <td class="edit">
@@ -161,21 +152,16 @@
                     </tr>
                     <tr>
                         <td class="people">
-                            <img src="../img/apple.jpg" alt="">
+                            <img src="../img/rMango.jpg" alt="">
                             <div class="people-de">
-                                <h5>Green Apple</h5>
-                                <p>Organic, Produced in personal garden</p>
+                                <h5>Khrisa pati</h5>
                             </div>
                         </td>
                         <td class="people-des">
-                            <h5>Hosen Shaheb</h5>
-                            <p>Address</p>
+                            <h5>Mango</h5>
                         </td>
                         <td>
-                            <p>Price: 1,000</p>
-                        </td>
-                        <td class="active">
-                            <p>Active</p>
+                            <p>500 kg</p>
                         </td>
 
                         <td class="edit">
@@ -185,21 +171,16 @@
                     </tr>
                     <tr>
                         <td class="people">
-                            <img src="../img/Watermelon.jpg" alt="">
+                            <img src="../img/rMango.jpg" alt="">
                             <div class="people-de">
-                                <h5>Watermelon</h5>
-                                <p>Organic, Produced in personal garden</p>
+                                <h5>Khrisa pati</h5>
                             </div>
                         </td>
                         <td class="people-des">
-                            <h5>Hosen Shaheb</h5>
-                            <p>Address</p>
+                            <h5>Mango</h5>
                         </td>
                         <td>
-                            <p>Price: 1,000</p>
-                        </td>
-                        <td class="active">
-                            <p>Active</p>
+                            <p>500 kg</p>
                         </td>
 
                         <td class="edit">
@@ -207,6 +188,307 @@
                         </td>
 
                     </tr>
+                    <tr>
+                        <td class="people">
+                            <img src="../img/rMango.jpg" alt="">
+                            <div class="people-de">
+                                <h5>Khrisa pati</h5>
+                            </div>
+                        </td>
+                        <td class="people-des">
+                            <h5>Mango</h5>
+                        </td>
+                        <td>
+                            <p>500 kg</p>
+                        </td>
+
+                        <td class="edit">
+                            <a href="#">Edit</a>
+                        </td>
+
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <h3 class="i-name">Pending Order</h3>
+        <div class="board">
+            <table width="100%">
+                <thead>
+                    <tr>
+                        <td>Invoice ID</td>
+                        <td>Address</td>
+                        <td>Status</td>
+                        <td>Action</td>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td class="people">
+                            <div class="people-de">
+                                <h5>18765</h5>
+                            </div>
+                        </td>
+                        <td class="people-des">
+                            <p>Address</p>
+                        </td>
+                        <td>
+                            <p style="color:rgb(233, 81, 81); border-radius:4px;">Pending</p>
+                        </td>
+
+                        <td class="edit">
+                            <a href="#"
+                                style="background-color:rgb(165, 238, 165);padding: 6px; border-radius:4px;">Edit</a>
+                            <a href=" #"
+                                style="background-color:rgb(245, 67, 67); padding: 6px; border-radius:4px;">Delete</a>
+                        </td>
+
+                    </tr>
+                    <tr>
+                        <td class="people">
+                            <div class="people-de">
+                                <h5>18765</h5>
+                            </div>
+                        </td>
+                        <td class="people-des">
+                            <p>Address</p>
+                        </td>
+                        <td>
+                            <p style="color:rgb(233, 81, 81); border-radius:4px;">Pending</p>
+                        </td>
+
+                        <td class="edit">
+                            <a href="#"
+                                style="background-color:rgb(165, 238, 165);padding: 6px; border-radius:4px;">Edit</a>
+                            <a href=" #"
+                                style="background-color:rgb(245, 67, 67); padding: 6px; border-radius:4px;">Delete</a>
+                        </td>
+
+                    </tr>
+                    <tr>
+                        <td class="people">
+                            <div class="people-de">
+                                <h5>18765</h5>
+                            </div>
+                        </td>
+                        <td class="people-des">
+                            <p>Address</p>
+                        </td>
+                        <td>
+                            <p style="color:rgb(233, 81, 81); border-radius:4px;">Pending</p>
+                        </td>
+
+                        <td class="edit">
+                            <a href="#"
+                                style="background-color:rgb(165, 238, 165);padding: 6px; border-radius:4px;">Edit</a>
+                            <a href=" #"
+                                style="background-color:rgb(245, 67, 67); padding: 6px; border-radius:4px;">Delete</a>
+                        </td>
+
+                    </tr>
+                    <tr>
+                        <td class="people">
+                            <div class="people-de">
+                                <h5>18765</h5>
+                            </div>
+                        </td>
+                        <td class="people-des">
+                            <p>Address</p>
+                        </td>
+                        <td>
+                            <p style="color:rgb(233, 81, 81); border-radius:4px;">Pending</p>
+                        </td>
+
+                        <td class="edit">
+                            <a href="#"
+                                style="background-color:rgb(165, 238, 165);padding: 6px; border-radius:4px;">Edit</a>
+                            <a href=" #"
+                                style="background-color:rgb(245, 67, 67); padding: 6px; border-radius:4px;">Delete</a>
+                        </td>
+
+                    </tr>
+                    <tr>
+                        <td class="people">
+                            <div class="people-de">
+                                <h5>18765</h5>
+                            </div>
+                        </td>
+                        <td class="people-des">
+                            <p>Address</p>
+                        </td>
+                        <td>
+                            <p style="color:rgb(233, 81, 81); border-radius:4px;">Pending</p>
+                        </td>
+
+                        <td class="edit">
+                            <a href="#"
+                                style="background-color:rgb(165, 238, 165);padding: 6px; border-radius:4px;">Edit</a>
+                            <a href=" #"
+                                style="background-color:rgb(245, 67, 67); padding: 6px; border-radius:4px;">Delete</a>
+                        </td>
+
+                    </tr>
+
+                </tbody>
+            </table>
+        </div>
+        <h3 class="i-name">Reviews</h3>
+        <div class="board">
+            <table width="100%">
+                <thead>
+                    <tr>
+                        <td>Product/Service</td>
+                        <td>Invoice ID</td>
+                        <td>Ratings</td>
+                        <td>Comment</td>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td class="people">
+                            <div class="people-de">
+                                <p>Mango</p>
+                            </div>
+                        </td>
+                        <td class="people-des">
+                            <p>123456</p>
+                        </td>
+                        <td>
+                            <p>8/10</p>
+                        </td>
+
+                        <td class="edit">
+                            <p>Good Product</p>
+                        </td>
+
+                    </tr>
+                    <tr>
+                        <td class="people">
+                            <div class="people-de">
+                                <p>Delivery</p>
+                            </div>
+                        </td>
+                        <td class="people-des">
+                            <p>123456</p>
+                        </td>
+                        <td>
+                            <p>3/10</p>
+                        </td>
+
+                        <td class="edit">
+                            <p>Very Bad packageing</p>
+                        </td>
+
+                    </tr>
+                    <tr>
+                        <td class="people">
+                            <div class="people-de">
+                                <p>Mango</p>
+                            </div>
+                        </td>
+                        <td class="people-des">
+                            <p>123456</p>
+                        </td>
+                        <td>
+                            <p>8/10</p>
+                        </td>
+
+                        <td class="edit">
+                            <p>Good Product</p>
+                        </td>
+
+                    </tr>
+                    <tr>
+                        <td class="people">
+                            <div class="people-de">
+                                <p>Delivery</p>
+                            </div>
+                        </td>
+                        <td class="people-des">
+                            <p>123456</p>
+                        </td>
+                        <td>
+                            <p>3/10</p>
+                        </td>
+
+                        <td class="edit">
+                            <p>Very Bad packageing</p>
+                        </td>
+
+                    </tr>
+                    <tr>
+                        <td class="people">
+                            <div class="people-de">
+                                <p>Mango</p>
+                            </div>
+                        </td>
+                        <td class="people-des">
+                            <p>123456</p>
+                        </td>
+                        <td>
+                            <p>8/10</p>
+                        </td>
+
+                        <td class="edit">
+                            <p>Good Product</p>
+                        </td>
+
+                    </tr>
+                    <tr>
+                        <td class="people">
+                            <div class="people-de">
+                                <p>Delivery</p>
+                            </div>
+                        </td>
+                        <td class="people-des">
+                            <p>123456</p>
+                        </td>
+                        <td>
+                            <p>3/10</p>
+                        </td>
+
+                        <td class="edit">
+                            <p>Very Bad packageing</p>
+                        </td>
+
+                    </tr>
+                    <tr>
+                        <td class="people">
+                            <div class="people-de">
+                                <p>Mango</p>
+                            </div>
+                        </td>
+                        <td class="people-des">
+                            <p>123456</p>
+                        </td>
+                        <td>
+                            <p>8/10</p>
+                        </td>
+
+                        <td class="edit">
+                            <p>Good Product</p>
+                        </td>
+
+                    </tr>
+                    <tr>
+                        <td class="people">
+                            <div class="people-de">
+                                <p>Delivery</p>
+                            </div>
+                        </td>
+                        <td class="people-des">
+                            <p>123456</p>
+                        </td>
+                        <td>
+                            <p>3/10</p>
+                        </td>
+
+                        <td class="edit">
+                            <p>Very Bad packageing</p>
+                        </td>
+
+                    </tr>
+
+
                 </tbody>
             </table>
         </div>
