--- a/Admin/orderList.html
+++ b/Admin/orderList.html
@@ -57,7 +57,49 @@
     <!-- your code here -->
     <section>
         <div class="mainBody">
-            Your Code
+            <table class="table table-striped table-hover">
+                <thead>
+                    <tr>
+                        <td>User Name</td>
+                        <td>User ID</td>
+                        <td>Address</td>
+                        <td>Status</td>
+                        <td>Action</td>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td class="people">
+                            <div class="people-de">
+                                <h5>Rasula Makbul</h5>
+                            </div>
+                        </td>
+                        <td class="people-des">
+                            <p>makbul123</p>
+                        </td>
+                        <td>
+                            <p>Mirpur,Dhaka</p>
+                        </td>
+                        <td>
+                            <p style="color:rgb(233, 81, 81); border-radius:4px;">Pending</p>
+                        </td>
+
+
+                        <td class="edit">
+                            <a href="#"
+                                style="background-color:rgb(160, 244, 250);padding: 6px; border-radius:4px;">View</a>
+                            <a href="#"
+                                style="background-color:rgb(165, 238, 165);padding: 6px; border-radius:4px;">Edit</a>
+                            <a href=" #"
+                                style="background-color:rgb(245, 67, 67); padding: 6px; border-radius:4px;">Delete</a>
+                        </td>
+
+                    </tr>
+
+
+
+                </tbody>
+            </table>
         </div>
     </section>
 
