--- a/Admin/reviews.html
+++ b/Admin/reviews.html
@@ -57,7 +57,129 @@
     <!-- your code here -->
     <section>
         <div class="mainBody">
-            Your Code
+            <table width="100%">
+                <thead>
+                    <tr>
+                        <td>Product/Service</td>
+                        <td>Invoice ID</td>
+                        <td>Ratings</td>
+                        <td>Comment</td>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td class="people">
+                            <div class="people-de">
+                                <p>Mango</p>
+                            </div>
+                        </td>
+                        <td class="people-des">
+                            <p>123456</p>
+                        </td>
+                        <td>
+                            <p>8/10</p>
+                        </td>
+
+                        <td class="edit">
+                            <p style="color:rgb(63, 247, 176); border-radius:4px;">Good Product</p>
+                        </td>
+
+                    </tr>
+                    <tr>
+                        <td class="people">
+                            <div class="people-de">
+                                <p>Delivery</p>
+                            </div>
+                        </td>
+                        <td class="people-des">
+                            <p>123456</p>
+                        </td>
+                        <td>
+                            <p>3/10</p>
+                        </td>
+
+                        <td class="edit">
+                            <p style="color:rgb(233, 81, 81); border-radius:4px;">Very Bad packageing</p>
+                        </td>
+
+                    </tr>
+                    <tr>
+                        <td class="people">
+                            <div class="people-de">
+                                <p>Mango</p>
+                            </div>
+                        </td>
+                        <td class="people-des">
+                            <p>123456</p>
+                        </td>
+                        <td>
+                            <p>8/10</p>
+                        </td>
+
+                        <td class="edit">
+                            <p style="color:rgb(63, 247, 176); border-radius:4px;">Good Product</p>
+                        </td>
+
+                    </tr>
+                    <tr>
+                        <td class="people">
+                            <div class="people-de">
+                                <p>Delivery</p>
+                            </div>
+                        </td>
+                        <td class="people-des">
+                            <p>123456</p>
+                        </td>
+                        <td>
+                            <p>3/10</p>
+                        </td>
+
+                        <td class="edit">
+                            <p style="color:rgb(233, 81, 81); border-radius:4px;">Very Bad packageing</p>
+                        </td>
+
+                    </tr>
+                    <tr>
+                        <td class="people">
+                            <div class="people-de">
+                                <p>Mango</p>
+                            </div>
+                        </td>
+                        <td class="people-des">
+                            <p>123456</p>
+                        </td>
+                        <td>
+                            <p>8/10</p>
+                        </td>
+
+                        <td class="edit">
+                            <p style="color:rgb(63, 247, 176); border-radius:4px;">Good Product</p>
+                        </td>
+
+                    </tr>
+                    <tr>
+                        <td class="people">
+                            <div class="people-de">
+                                <p>Delivery</p>
+                            </div>
+                        </td>
+                        <td class="people-des">
+                            <p>123456</p>
+                        </td>
+                        <td>
+                            <p>3/10</p>
+                        </td>
+
+                        <td class="edit">
+                            <p style="color:rgb(233, 81, 81); border-radius:4px;">Very Bad packageing</p>
+                        </td>
+
+                    </tr>
+
+
+
+                </tbody>
+            </table>
         </div>
     </section>
 
